# petabricks

./: .gitignore  AUTHORS  COPYING  Copy1D.schedule_initial.dot  Copy2D.schedule_initial.dot  Copy3D.schedule_initial.dot  Doxyfile  Insertionsort.schedule.dot  InsertionsortSubArray.schedule.dot  Makefile.am  Makefile.cvs  Makefile.in  Merge.schedule_initial.dot  Merge2_Parallel.schedule.dot  Mergesort.schedule.dot  MergesortSubArray.schedule.dot  MergesortSubArray.schedule_initial.dot  Parallel_Mergesort.schedule.dot  Parallel_MergesortSubArray.schedule.dot  Parallel_MergesortSubArray.schedule_initial.dot  QuickSort.schedule.dot  QuicksortSubArray.schedule.dot  QuicksortSubArray.schedule_initial.dot  Radixsort.schedule_initial.dot  RadixsortSubArray.schedule.dot  RadixsortSubArray.schedule_initial.dot  Sort.schedule.dot  SortSubArray.schedule.dot  SortSubArray.schedule_initial.dot  autogen.sh  configure  configure.ac  gpu_profiling  hecura.kdevelop  parser.out  parsetab.py  pbbenchmark  pbrun  pbsrun.py  petabricks.kdevelop  (+3 more)
carver-config/: add-131072-16.cfg  add-131072-256.cfg  add-131072-64.cfg  add-16384-16.cfg  add-16384-256.cfg  add-16384-4.cfg  add-16384-64.cfg  add-262144-64.cfg  add-32768-1.cfg  add-32768-16.cfg  add-32768-2.cfg  add-32768-256.cfg  add-32768-4.cfg  add-32768-64.cfg  add-65536-1.cfg  add-65536-16.cfg  add-65536-2.cfg  add-65536-256.cfg  add-65536-64.cfg  add-8192-4.cfg  add-dev-6.cfg  add-dev-8.cfg  add-nodist-6.cfg  add-nodist-8.cfg  mul-1024-2.cfg  mul-1024-64.cfg  mul-1024.cfg  mul-128-2.cfg  mul-16384-4.cfg  mul-2048-16.cfg  mul-2048-2.cfg  mul-2048-3.cfg  mul-2048-64.cfg  mul-2048.cfg  mul-256-2.cfg  mul-256.cfg  mul-4096-16.cfg  mul-4096-4.cfg  mul-4096-64.cfg  mul-512-2.cfg  (+26 more)
doc/: NERSC  QUICK-START  abstract  accuracyfeatures.txt  petabricksideas.txt  potential-users  requiredpackages
doc/logo/: README  pblogo.xcf
examples/: .compile.output  .gitignore  ConvolutionFFT.pbcc  Makefile  Makefile.in  Restrict2D.pbcc  add.pbcc  lu.pbcc~  matrixadd.pbcc  matrixmultiply.pbcc  matrixmultiply.txt  mm2.~pbcc  multiply.pbcc  rollingsum.pbcc  scaletest.pbcc  sor.pbcc~  strassen.pbcc  templatetest.pbcc  test1.hecura  test1.pbcc  test12.pbcc  test2.hecura  test2.pbcc  test3.hecura  test3.pbcc  test4.pbcc  test5.pbcc  test7.pbcc  test8.pbcc  test9.pbcc  testdiag.pbcc  testruleir.pbcc  transpose.pbcc  utilities.pbcc
scripts/: .gitignore  autotune.py  candidatetester.py  checkmaxima.py  checkpython.py  configtester.py  configtool.py  countsearchspace.py  csvavg.py  formula.py  gatuner.py  gatuner.txt  genmatrix100.py  genmatrix1D-100.py  genmatrix1D.py  genmatrix2D.py  genmatrixZeroBound.py  graphgen.py  halide_autotune.py  heuristicdb.py  highlevelconfig.py  learningcompiler.py  learningframework.py  maximaparser.py  mutators.py  oldtuner.py  onlinelearning.py  optimize.py  pbbenchmark.py  pbbenchmark.tests  pbrun.py  pbsrun.py  pbutil.py  preprocessor.py  progress.py  sgatuner.py  simpleconfigexample.py  smoketest.py  smoketest.sh  smoketest.tests  (+11 more)
src/: .gitignore  Makefile.am  Makefile.in  autotuner.cpp  autotuner.h  choicegrid.cpp  choicegrid.h  codegenerator.cpp  codegenerator.h  config.h.in  config_gpu.h  cxxconfig.h.in  dynamicscheduler.cpp  dynamicscheduler.h  dynamictask.cpp  dynamictask.h  formula.cpp  formula.h  getline.cpp  getline.h  hecura.h  hecuraruntime.cpp  hecuraruntime.h  iterationorders.cpp  jalloc.cpp  jargs.cpp  jargs.h  jasm.h  jassert.cpp  jassert.h  jblockingqueue.h  jconvert.h  jfilesystem.cpp  jfilesystem.h  jmutex.h  jprintable.h  jrefcounted.cpp  jrefcounted.h  jserialize.cpp  jsocket.cpp  (+83 more)
src/common/: getline.h  hash.h  jalloc.cpp  jalloc.h  jargs.cpp  jargs.h  jasm.h  jassert.cpp  jassert.h  jblockingqueue.h  jbuffer.cpp  jbuffer.h  jconvert.h  jfilesystem.cpp  jfilesystem.h  jmutex.h  jprintable.cpp  jprintable.h  jrefcounted.cpp  jrefcounted.h  jserialize.cpp  jserialize.h  jsocket.cpp  jsocket.h  jthread.cpp  jthread.h  jtimer.cpp  jtimer.h  jtunable.cpp  jtunable.h  openclutil.cpp  openclutil.h  srcpos.cpp  srcpos.h  thedeque.h
src/compiler/: Makefile  choicedepgraph.cpp  choicedepgraph.h  choicegrid.cpp  choicegrid.h  clcodegenerator.cpp  clcodegenerator.h  codegenerator.cpp  codegenerator.h  configitem.cpp  configitem.h  cxxconfig.h.in  dbmanager.cpp  dbmanager.h  formula.cpp  formula.h  gpurule.cpp  gpurule.h  heuristic.cpp  heuristic.h  heuristicmanager.cpp  heuristicmanager.h  iterationorders.cpp  iterationorders.h  learner.cpp  learner.h  libpbcompiler_a-maximalexer.cpp  libpbcompiler_a-ruleirlexer.cpp  matrixdef.cpp  matrixdef.h  matrixdependency.cpp  matrixdependency.h  maximalexer.lpp  maximaparser.h  maximaparser.ypp  maximawrapper.cpp  maximawrapper.h  openclutil.cpp  openclutil.h  pbc.cpp  (+36 more)
src/runtime/: Makefile  autotuner.cpp  autotuner.h  cellproxy.cpp  cellproxy.h  contiguousregion.cpp  contiguousregion.h  deviceinfo.cpp  deviceinfo.h  distributedgc.cpp  distributedgc.h  dynamicscheduler.cpp  dynamicscheduler.h  dynamictask.cpp  dynamictask.h  gpudynamictask.cpp  gpudynamictask.h  gpumanager.cpp  gpumanager.h  gpuspecializedtask.h  gputaskinfo.cpp  gputaskinfo.h  iregion.cpp  iregion.h  iregioncache.h  iregionreplyproxy.h  matrix.cpp  matrix.h  matrixio.cpp  matrixio.h  matrixreader.lpp  matrixregion.h  matrixregion_new.h  matrixspecializations.h  matrixstorage.cpp  matrixstorage.h  memoization.cpp  memoization.h  openclutil.cpp  openclutil.h  (+72 more)
src/runtime/tests/: migrationtest.cpp  regiondatatest.cpp  regionmatrixtest.cpp  regionremotetest.cpp  rttestmm.cpp
templates/: cpp  h  header  jalib
testdata/: .Restrict2D.out  .add.out  .multiply.out  .test1.out  .test10.out  .test11.out  .test12.out  .test2.out  .test3.out  .test4.out  .test5.out  .test6.out  .test7.out  .test8.out  .test9.out  .transpose.out  Eleven0D  Helmholtz3DA  Helmholtz3DB0  Helmholtz3DB1  Helmholtz3DB2  Helmholtz3DPhi  Helmholtz3DRHS  Helmholtz3DWeight  Helmholtz3DZeros  Hundred0D  Kernel5  KmeansRandInput  LUTriL  LUTriU  MatApproxK  MatApproxRand2D  MinusOne0D  One0D  OnePointFive0D  Ones2D  PrecondA  Rand0D  Rand1D  Rand1D17  (+21 more)
(+830 files in other folders)
